tests/paczka1/fuzzy1/98115737.err
Error in line 1: mYr0UAFLF8 S218 19,0
Error in line 5: xeetKz A715 28,1
Error in line 10: LblbRZZ A87 68,5
Error in line 11: xeetKz S798 49,0
Error in line 36: QJ3ygq6yDmh A715 64,3
